--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.16",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
