--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest"
+    "test": "jest",
+    "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
