--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
-    "axios": "^1.13.2",
+    "axios": "^1.13.5",
+    "jest-fixed-jsdom": "^0.0.11",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
@@ -31,6 +32,7 @@
     "eslint-config-next": "16.1.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "msw": "^2.11.2",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "typescript": "^5"
